# claude-skills-e2b-example

./: .env.example  README.md  build_template.py  main.py  pyproject.toml
plugins/: marketplace.json
skills/calendar/: SKILL.md
skills/calendar/demo/: app.py  index.html
skills/calendar/scripts/: calendar_module.py  utils.py
skills/chatgpt-core/: SKILL.md
skills/chatgpt-core/scripts/: chat.py  chat_vision.py  chatgpt_module.py  generate_code.py
skills/crypto/: SKILL.md
skills/crypto/scripts/: crypto_module.py
skills/nano-banana/: SKILL.md
skills/nano-banana/scripts/: nano_banana.py
skills/news-aggregation/: SKILL.md
skills/news-aggregation/scripts/: news_module.py
skills/sora-video/: SKILL.md
skills/sora-video/scripts/: sora_img2video.py  sora_video.py
skills/stock/: SKILL.md
skills/stock/scripts/: stock_module.py
skills/tts/: SKILL.md
skills/tts/scripts/: tts_module.py
skills/weather/: SKILL.md
skills/weather/scripts/: weather_module.py
